--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,36 +1,42 @@
 :root{
-  --primary-color: #fff;
-  --secondary-color: rgba(0, 0, 255, 0.6);
-  --assend-color: rgba(0, 0, 150, 0.7);
-  --assend-color-2: #9EC8B9;
+  --primary-color: #111;
+  --secondary-color: #fff;
+  --assend-color: #444;
+  --assend-color-2: rgba(0, 0, 0, 0.4);
+  --assend-color-3: #eaeaea;
+  --assend-color-4: #F4BF96;
 }
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-  color: var(--assend-color);
+  font-family: 'Assistant', sans-serif;
+  color: var(--secondary-color);
 }
 body{
-  background-color: var(--primary-color);
+  background-color: var(--assend-color);
 }
 h1{
   font-size: 2.3rem;
 }
 h2{
-  font-size: 1.7rem;
+  font-size: 1.9rem;
+}
+h3{
+  font-size: 1.6rem;
+  font-weight: 500;
 }
 p{
-  font-size: 1rem;
+  font-size: 1.3rem;
+  font-weight: 500;
 }
 .container{
   width: 100vw;
   margin: 0 auto;
 }
 .page{
-  width: 97%;
-  min-height: 700px;
-  max-height: 100vh;
+  width: 100%;
+  height: 100vh;
   margin: 0 auto;
   padding: 0 10px;
 }
@@ -50,12 +56,11 @@ p{
 }
 .form input{
   width: 450px;
-  border: 2px solid rgba(0, 0, 255, 0.6);
-  padding: 10px 20px;
+  background-color: var(--assend-color-2);
+  border: none;
+  padding: 15px 20px;
   margin: 0 0 15px 0;
-}
-.form input:focus{
-  border: 2px solid rgba(255, 255, 255, 0.7);
+  color: var(--secondary-color);
 }
 .btn{
   width: 170px;
@@ -66,20 +71,17 @@ p{
 .navBar{
   width: 100vw;
   height: 80px;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  background-color: var(--secondary-color);
-  box-shadow: 0 0 5px var(--secondary-color);
+  background-color: var(--assend-color-2);
   display: flex;
   align-items: center;
   padding: 0 10px;
+  z-index: 5;
 }
 .navHalf{
   width: 50%;
-}
-.navLogo{
-  color: var(--primary-color);
 }
 .navUl{
   list-style-type: none;
@@ -88,61 +90,185 @@ p{
   justify-content: space-evenly;
 }
 .navLink{
-  display: inline-block;
   text-decoration: none;
-  color: var(--primary-color);
-  padding: 5px 10px;
+  padding: 10px 20px;
 }
 .navLink:hover{
   border-bottom: 2px solid rgba(255, 255, 255, 0.7);
 }
 .logoutBtn{
   width: 90px;
-  background-color: rgba(0, 0, 255, 0.3);
-  color: #efefef;
+  background-color: var(--assend-color-2);
   border: 2px solid #efefef;
   border-radius: 4px;
 }
 .logoutBtn:hover{
-  color: var(--secondary-color);
-  background-color: #efefef;
+  background-color: var(--assend-color);
 }
 .logoutBtn:active{
-  color: #fff;
-  background-color: #333;
+  background-color: var(--primary-color);
 }
 /* navbar end */
 
 /* home screen start */
 .heroPage{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-image: url("./images/full_suit_man_1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+.bgCover{
+  width: 100%;
+  height: 100%;
+  background-color: var(--assend-color-2);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+.heroLetterDiv{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
 }
+.toBlogBtn{
+  text-decoration: none;
+  display: inline-block;
+  padding: 13px 20px;
+  background-color: var(--assend-color);
+  border-radius: 4px;
+  border: 1px solid var(--secondary-color);
+  cursor: pointer;
+}
+.toBlogBtn:hover{
+  background-color: var(--secondary-color);
+  color: var(--assend-color)
+}
+.recentBlogsParent{
+  width: 100%;
+  height: 27%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: var(--assend-color-2);
+  padding: 30px 20px 0 20px;
+}
+.recentBlogsDiv{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 2%;
+}
+.recentBlogTitle{
+  color: var(--assend-color-3);
+  margin: 0 0 10px 0;
+}
+.recentBlog{
+  width: 31%;
+  height: 100%;
+  background-color: var(--assend-color-2);
+  padding: 25px 20px;
+  border-radius: 4px;
+}
+
+.theBlogTitle{
+  color: var(--assend-color-3);
+  margin: 0 0 5px 0;
+}
+.theBlogPara{
+  color: var(--assend-color-3);
+}
 .introPage{
   display: flex;
-  border-top: 2px solid var(--secondary-color);
-  border-bottom: 2px solid var(--secondary-color);
+  background-color: var(--assend-color-2);
 }
 .introHalf{
   width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
 }
 .introLeft{
-  background-color: var(--secondary-color);
+  position: relative;
 }
-.introP{
-  color: var(--primary-color);
+.introImgDiv{
+  width: 250px;
+  height: 390px;
+  position: absolute;
+}
+.introImgOneDiv{
+  top: 15%;
+  left: 20%;
+}
+.introImgTwoDiv{
+  top: 33%;
+  left: 42%;
+}
+.legendImg{
+  width: 100%;
+  height: 100%;
 }
 .introRight{
-  background-color: var(--primary-color);
+  display: flex;
+  align-items: center;
+  padding: 5% 10% 5% 5%;
+}
+.introLgend{
+  text-align: left;
+}
+.offerPage{
+  background-color: var(--assend-color-2);
+  padding: 0 40px;
+}
+.offerDiv{
+  width: 100%;
+  height: 75%;
+  display: flex;
+}
+.theOffer{
+  width: 33.3%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.theOffer div{
+  width: 40%;
+  height: 40%;
+  background-color: var(--assend-color-2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--secondary-color);
+  border-radius: 10px;
+}
+.offerIcons{
+  font-size: 5rem;
+}
+.offerIconsTwo{
+  margin: 0 0 0.7rem 0;
+}
+.offerInfo{
+  width: 100%;
+  height: 25%;
+  border-top: 1px solid var(--secondary-color);
+  display: flex;
+  align-items: center;
+  padding: 0 60px;
 }
 .homeFooter{
+  width: 100vw;
   display: flex;
   justify-content: center;
   margin: 10px 0 0 0;
@@ -154,34 +280,35 @@ p{
   flex-direction: column;
   justify-content: center;
   gap: 20px;
-  background-color: var(--secondary-color);
   padding: 0 0 0 50px;
-}
-.white{
-  color: white;
 }
 /* home screen end */
 
 /* sign in page start */
 .loginPage{
+  background-image: url("./images/blog_user.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .loginDiv{
+  background-color: var(--assend-color-2);
   border: 2px solid var(--secondary-color);
   padding: 20px;
+  position: relative;
 }
 .loginForm{
   margin: 30px 0 0 0;
 }
 .loginBtn{
-  background-color: var(--secondary-color);
-  color: var(--primary-color);
-  border: 2px solid var(--primary-color);
+  background-color: var(--assend-color);
+  border: 1px solid var(--secondary-color);
 }
 .loginBtn:hover{
-  background-color: var(--assend-color);
+  background-color: var(--secondary-color);
+  color: var(--assend-color);
 }
 .loginBtn:active{
   background-color: var(--primary-color);
@@ -203,11 +330,20 @@ p{
 
 /* sign up page start */
 .registerPage{
+  height: 120vh;
+  background-image: url("./images//blog_user.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.bgCoverTwo{
+  width: 100vw;
+  height: 120vh;
+}
 .registerDiv{
+  position: relative;
   border: 2px solid var(--secondary-color);
   padding: 20px;
 }
@@ -221,35 +357,66 @@ p{
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10%;
-}
-.dashboardHalf{
-  min-height: 700px;
-  max-height: 100vh;
   padding: 10% 0 0 0;
 }
+.dashboardHalf{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .dashboardLeftHalf{
-  width: 20%;
+  width: 40%;
+  flex-direction: column;
+  gap: 10%;
+}
+.blogHub{
+  width: 250px;
+  height: 300px;
+  overflow-y: auto;
+  background-color: var(--assend-color-4);
+  padding: 20px;
+}
+.blogHubTitle{
+  border-bottom: 1px solid black;
+  padding: 10px 5px;
+  color: var(--primary-color);
+  cursor: pointer;
+}
+.blogHubTitle:hover{
+  background-color: var(--assend-color-2);
 }
 .dashboardRightHalf{
-  width: 40%;
+  width: 60%;
+  align-items: flex-end;
 }
 .dashboardForm{
-  width: 100%;
+  width: 60%;
   height: 100%;
 }
 .creating{
-  color: rgba(0, 255, 0, 0.6);
+  color: var(--assend-color-4);
 }
 .updating{
   color: var(--secondary-color);
 }
 #blogName{
   width: 100%;
+  background-color: var(--assend-color-4);
 }
 #blogBody{
   padding: 30px;
   margin: 0 0 30px 0;
+  background-color: var(--assend-color-4);
+  color: var(--primary-color)
+}
+.postBlogBtn{
+  background-color: var(--assend-color-4);
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+.postBlogBtn:hover{
+  background-color: var(--assend-color-3);
 }
 .editBar{
   text-align: right;
@@ -257,11 +424,15 @@ p{
   color: #333;
 }
 .editIcons{
+  color: var(--primary-color);
   cursor: pointer;
   margin: 0 10px 0 0;
 }
 .backToForm{
   text-decoration: none;
+}
+.theBlogName{
+  color: var(--primary-color);
 }
 /* dashboard page end */
 
@@ -275,18 +446,22 @@ p{
   border: 2px solid var(--secondary-color);
   padding: 20px;
   margin: 40px 0 0 0;
+  background-color: var(--assend-color-4);
 }
 .theBlogBody{
-  font-size: 1.1rem;
   margin: 20px 0;
+  color: var(--primary-color)
+}
+.theBlogAuthor{
+  color: var(--primary-color)
 }
 /* blog list end */ 
 
 /* user blog list page start */
 .userBlogListPage{
-  width: 97%;
+  width: 100vw;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0 40px;
 }
 /* user blog list page end */
 
